# Multi-Source-Candidate-Data-Transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.json  minimal.json  strict_email.json
output/: .gitkeep  candidates_43ceb89d.json  candidates_5f0af4c5.json  candidates_890a636e.json  candidates_a6383719.json  candidates_ats_d1e1e99d.json  candidates_b5023821.json  candidates_b5ed61fd.json  candidates_combined_1ab46684.json  candidates_csv_7d72b55a.json  candidates_e01e728f.json  candidates_e5d276a0.json  candidates_ec974f38.json  candidates_ef374604.json  candidates_f24aa9c1.json  candidates_f632c382.json  candidates_github_5a2bf08e.json  candidates_resume_e9e3d579.json  sample_candidates.json
scripts/: generate_resume.py
sources/: ats.json  github_urls.txt  recruiter.csv
src/candidate_transformer/: __init__.py  app.py  merger.py  pipeline.py  projector.py  resolver.py  validator.py
src/candidate_transformer/extractors/: __init__.py  _location_parser.py  _qwen_client.py  ats_extractor.py  base.py  csv_extractor.py  github_extractor.py  resume_extractor.py  resume_extractor_llm.py
src/candidate_transformer/models/: __init__.py  canonical.py  config.py  raw.py
src/candidate_transformer/normalizers/: __init__.py  country.py  date.py  email.py  name.py  phone.py  skills.py
static/: app.js  index.html  styles.css
tests/: test_edge_cases.py  test_extractors.py  test_normalizers.py  test_pipeline.py  test_resume_extractor_llm.py
